Updates data attributes for tracking purposes.

--- a/src/error.html
+++ b/src/error.html
@@ -61,17 +61,19 @@
             <li>
                 <ul class="headerMenu__social">
                     <li>
-                        <a href="{{social.facebook}}"
+                        <a href="{{social.platformUrls.facebook}}"
                            target="_blank"
                            class="headerMenu__social--facebook">Facebook</a>
                     </li>
                     <li>
-                        <a href="{{social.instagram}}"
+                        <a href="{{social.platformUrls.instagram}}"
                            target="_blank"
                            class="headerMenu__social--instagram">Instagram</a>
                     </li>
-                    <li><a href="{{social.vimeo}}" target="_blank" class="headerMenu__social--vimeo">Vimeo</a></li>
-                    <!--<li><a href="{{social.twitter}}" target="_blank" class="headerMenu__social&#45;&#45;twitter">Twitter</a></li>-->
+                    <li><a href="{{social.platformUrls.vimeo}}" target="_blank" class="headerMenu__social--vimeo">Vimeo</a></li>
+                    <!--
+                    <li><a href="{{social.platformUrls.twitter}}" target="_blank" class="headerMenu__social&#45;&#45;twitter">Twitter</a></li>
+                    -->
                 </ul>
             </li>
         </ul>
