--- a/src/index.html
+++ b/src/index.html
@@ -44,11 +44,14 @@
 
     <script src="js/vendor/modernizr-custom.js"></script>
 
+    <!--
+    {{gitRev()}}
+    -->
 </head>
 <body>
 
 <!--[if lt IE 8]>
-<p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
+<p class="browserupgrade">This website was build with modern browsers in mind. Please consider <a href="http://browsehappy.com/">upgrading
     your browser</a> to improve your experience.</p>
 <![endif]-->
 <!-- FB SDK
