Fixes Revision formatting. Neat-o.

--- a/src/index.html
+++ b/src/index.html
@@ -44,9 +44,8 @@
 
     <script src="js/vendor/modernizr-custom.js"></script>
 
-    <!--
-    {{gitRev()}}
-    -->
+    <!--{{gitRev()}}-->
+
 </head>
 <body>
 
