--- a/src/index.html
+++ b/src/index.html
@@ -37,14 +37,20 @@
     <!-- for Google -->
     <link rel='author' href='https://plus.google.com/u/0/103429485426405859499/'/>
 
-    <link rel="stylesheet" href="css/vendor/normalize.css">
-    <link rel="stylesheet" href="css/vendor/Genericons.css">
-    <link rel="stylesheet" href="css/vendor/bootstrap.min.css">
-    <link rel="stylesheet" href="css/main.css?id={{guid()}}">
+    <link rel="stylesheet" href="{{localizedCdn()}}/css/vendor/normalize.css">
+    <link rel="stylesheet" href="{{localizedCdn()}}/css/vendor/Genericons.css">
+    <link rel="stylesheet" href="{{localizedCdn()}}/css/vendor/bootstrap.min.css">
+    <link rel="stylesheet" href="{{localizedCdn()}}/css/main.css?id={{guid()}}">
 
-    <script src="js/vendor/modernizr-custom.js"></script>
+    <script src="{{localizedCdn()}}/js/vendor/modernizr-custom.js"></script>
 
-    <!--{{gitRev()}}-->
+    <!--
+
+    {{gitRev()}}
+
+    CDN Utilization: {{localizedCdn()}}
+
+    -->
 
 </head>
 <body>
@@ -190,7 +196,7 @@
             </svg>
             <ul class="photo-carousel">
                 {% for photo in photography %}
-                <li class="photo-carousel__item{% if loop.index === 1 %} active{% endif %}" data-index="{{loop.index0}}" data-image="{{photo.image}}">
+                <li class="photo-carousel__item{% if loop.index === 1 %} active{% endif %}" data-index="{{loop.index0}}" data-image="{{localizedCdn()}}{{photo.image}}">
                     <!--<img class="photo-carousel__image"
                          data-original="{{photo.image}}" />-->
                 </li>
@@ -246,7 +252,7 @@
     </section>
     <section id="Contact">
         <h2>Contact</h2>
-        <img src="img/sr-skull.svg" class="contact__logo"  />
+        <img src="{{localizedCdn()}}/img/sr-skull.svg" class="contact__logo"  />
         <div class="contact">
             <h3>Southern Reel</h3>
 
@@ -329,11 +335,11 @@
     <div id="overlayContent"></div>
 </div>
 
-<script src="js/vendor/underscore-min.js"></script>
-<script src="js/vendor/jquery.min.js"></script>
-<script src="js/vendor/lazyload.transpiled.min.js"></script>
-<script src="js/Ambiveo.js?id={{guid()}}"></script>
-<script src="js/main.js?id={{guid()}}"></script>
+<script src="{{localizedCdn()}}/js/vendor/underscore-min.js"></script>
+<script src="{{localizedCdn()}}/js/vendor/jquery.min.js"></script>
+<script src="{{localizedCdn()}}/js/vendor/lazyload.transpiled.min.js"></script>
+<script src="{{localizedCdn()}}/js/Ambiveo.js?id={{guid()}}"></script>
+<script src="{{localizedCdn()}}/js/main.js?id={{guid()}}"></script>
 
 <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
