--- a/src/index.html
+++ b/src/index.html
@@ -162,7 +162,7 @@
 </header>
 <div id="content" class="slide-show--active">
     <section id="Video" class="slide-show__container">
-        <iframe id="slide-show-iframe" data-url="{{localizedCdn()}}/{{iframeUrl}}" class="slide-show__iframe"
+        <iframe id="slide-show-iframe" data-url="{{iframeUrl}}" class="slide-show__iframe"
                 data-slide-count="{{projects.length}}"></iframe>
         <ul id="mobile-gallery" class="slide-show hidden">
             {% for project in projects %}
