--- a/src/index.html
+++ b/src/index.html
@@ -5,37 +5,37 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-    <title>Southern Reel</title>
+    <title>{{site.title}}</title>
 
-    <meta name="description" content="">
+    <meta name="description" content="{{site.description}}">
     <meta name="robots" content="all">
     <meta name="author"
-          content="">
-    <meta name="copyright" content="Copyright (c) 2017 Southern Reel">
+          content="{{site.author}}">
+    <meta name="copyright" content="Copyright (c) {{getCurrentYear()}} {{site.title}}">
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=1">
 
     <!-- Icons -->
-    <link rel="icon" type="image/png" href="http://southernreel.com/favicon.ico">
+    <link rel="icon" type="image/png" href="{{site.canonicalUrl}}/favicon.ico">
     <link rel="apple-touch-icon" href="./apple-touch-icon.jpg"/>
 
     <!-- for Facebook -->
     <meta property="og:title" content="Southern Reel"/>
     <meta property="og:type" content="profile"/>
-    <meta property="og:image" content="{{social.socialMediaImage}}"/>
-    <meta property="og:url" content="http://southernreel.com"/>
+    <meta property="og:image" content="{{site.canonicalUrl}}{{social.socialMediaImage}}"/>
+    <meta property="og:url" content="{{site.canonicalUrl}}"/>
     <meta property="og:description"
-          content=""/>
+          content="{{site.description}}"/>
 
     <!-- for Twitter -->
     <meta name="twitter:card" content="summary"/>
-    <meta name="twitter:title" content="Southern Reel"/>
+    <meta name="twitter:title" content="{{site.title}}"/>
     <meta name="twitter:description"
-          content=""/>
-    <meta name="twitter:image" content="{{social.socialMediaImage}}"/>
+          content="{{site.description}}"/>
+    <meta name="twitter:image" content="{{site.canonicalUrl}}{{social.socialMediaImage}}"/>
 
     <!-- for Google -->
-    <link rel='author' href='https://plus.google.com/u/0/103429485426405859499/'/>
+    <link rel='author' href='{{site.authorId}}'/>
 
     <link rel="stylesheet" href="{{localizedCdn()}}/css/vendor/normalize.css">
     <link rel="stylesheet" href="{{localizedCdn()}}/css/vendor/Genericons.css">
@@ -162,7 +162,7 @@
 </header>
 <div id="content" class="slide-show--active">
     <section id="Video" class="slide-show__container">
-        <iframe id="slide-show-iframe" data-url="{{iframeUrl}}" class="slide-show__iframe"
+        <iframe id="slide-show-iframe" data-url="{{site.iframeUrl}}" class="slide-show__iframe"
                 data-slide-count="{{projects.length}}"></iframe>
         <ul id="mobile-gallery" class="slide-show hidden">
             {% for project in projects %}
